--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch routes routes/index.js",
+    "dev": "nodemon --watch routes --watch models routes/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +13,10 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "hashids": "^1.1.4",
+    "moment": "^2.22.2",
+    "mongodb": "^3.1.3",
+    "mongoose": "^5.2.9",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
