--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --watch routes --watch models routes/index.js",
     "lint": "eslint routes models utils --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "m-mitsuhide <m.mitsuhide@amatelus.com>",
@@ -15,6 +15,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "hashids": "^1.1.4",
+    "klaw-sync": "^4.0.0",
     "moment": "^2.22.2",
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.9",
@@ -24,6 +25,7 @@
     "eslint": "^5.4.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "jest": "^23.5.0",
     "nodemon": "^1.18.3",
     "swagger-jsdoc": "^3.0.2",
     "swagger-ui-express": "^3.0.10"
