--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "server",
-  "version": "1.0.0",
+  "name": "ireversi-server",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "dev": "nodemon --watch routes --watch models routes/index.js",
-    "lint": "eslint routes models utils --fix",
-    "test": "jest"
+  "repository": {
+     "type": "git",
+     "url": "https://github.com/ireversi/ireversi-server.git"
   },
-  "keywords": [],
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development nodemon --watch src src/server.js",
+    "start": "cross-env NODE_ENV=production node src/server.js",
+    "lint": "eslint src tests --fix",
+    "test": "cross-env NODE_ENV=test jest",
+    "test:watch": "cross-env NODE_ENV=test jest --watch"
+  },
   "author": "m-mitsuhide <m.mitsuhide@amatelus.com>",
   "license": "MIT",
   "dependencies": {
@@ -19,15 +24,18 @@
     "moment": "^2.22.2",
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.9",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "swagger-jsdoc": "^3.0.2",
+    "swagger-ui-express": "^3.0.10"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "cross-env": "^5.2.0",
     "eslint": "^5.4.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "jest": "^23.5.0",
-    "nodemon": "^1.18.3",
-    "swagger-jsdoc": "^3.0.2",
-    "swagger-ui-express": "^3.0.10"
+    "nodemon": "^1.18.3"
   }
 }
