update: eslint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,14 @@
 {
-  "extends": "airbnb-base"
+  "extends": "airbnb-base",
+  "rules": {
+    "no-console": 0
+  },
+  "overrides": [
+    {
+      "files": ["tests/**"],
+      "rules": {
+        "no-undef": 0
+      }
+    }
+  ]
 }
