--- a/package.json
+++ b/package.json
@@ -20,25 +20,25 @@
   "author": "m-mitsuhide <m.mitsuhide@amatelus.com>",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "hashids": "^1.1.4",
-    "klaw-sync": "^4.0.0",
-    "moment": "^2.22.2",
-    "mongodb": "^3.1.3",
-    "mongodb-memory-server": "^2.0.1",
-    "mongoose": "^5.2.9",
-    "swagger-jsdoc": "^3.0.2",
-    "swagger-ui-express": "^3.0.10"
+    "dotenv": "6.0.0",
+    "express": "4.16.3",
+    "hashids": "1.1.4",
+    "klaw-sync": "4.0.0",
+    "moment": "2.22.2",
+    "mongodb": "3.1.3",
+    "mongodb-memory-server": "2.0.1",
+    "mongoose": "5.2.9",
+    "swagger-jsdoc": "3.0.2",
+    "swagger-ui-express": "3.0.10"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
-    "cross-env": "^5.2.0",
-    "eslint": "^5.4.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "jest": "^23.5.0",
-    "nodemon": "^1.18.3"
+    "chai": "4.1.2",
+    "chai-http": "4.0.0",
+    "cross-env": "5.2.0",
+    "eslint": "5.4.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "jest": "23.5.0",
+    "nodemon": "1.18.3"
   }
 }
