--- a/swagger/v1/homework/playing.yml
+++ b/swagger/v1/homework/playing.yml
@@ -36,7 +36,7 @@ tags: #:(コロン)は{}の 配列
               type: "integer"
               format: "int64"
               example: 1
-            x: 
+            userId: 
               type: "number"
               example: 1
            
