--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "stop": "now remove ireversi",
     "deploy": "now && now alias",
     "scale": "now scale ireversi.now.sh 1",
-    "lint": "eslint src tests --fix",
+    "lint": "eslint src tests -f codeframe",
+    "lint:fix": "eslint src tests --fix",
     "test": "cross-env NODE_ENV=test jest --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "coverage": "codecov"
@@ -40,7 +41,19 @@
     "eslint": "5.4.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-plugin-import": "2.14.0",
+    "husky": "1.0.0-rc.13",
     "jest": "23.5.0",
+    "lint-staged": "7.2.2",
     "nodemon": "1.18.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run lint"
+    ]
   }
 }
