--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongodb-memory-server": "2.0.1",
     "mongoose": "5.2.9",
     "swagger-jsdoc": "3.0.2",
-    "swagger-ui-express": "3.0.10"
+    "swagger-ui-express": "3.0.10",
+    "yarn": "1.9.4"
   },
   "devDependencies": {
     "chai": "4.1.2",
