--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "deploy": "now && now alias",
     "scale": "now scale ireversi.now.sh 1",
     "lint": "eslint src tests --fix",
-    "test": "cross-env NODE_ENV=test jest",
+    "test": "cross-env NODE_ENV=test jest --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watch"
   },
   "author": "m-mitsuhide <m.mitsuhide@amatelus.com>",
@@ -26,6 +26,7 @@
     "klaw-sync": "^4.0.0",
     "moment": "^2.22.2",
     "mongodb": "^3.1.3",
+    "mongodb-memory-server": "^2.0.1",
     "mongoose": "^5.2.9",
     "socket.io": "^2.1.1",
     "swagger-jsdoc": "^3.0.2",
