--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "husky": "1.0.0-rc.13",
     "jest": "23.5.0",
     "lint-staged": "7.2.2",
-    "nodemon": "1.18.3"
+    "nodemon": "1.18.3",
+    "prettier": "1.14.2"
   },
   "husky": {
     "hooks": {
