--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,7 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "no-await-in-loop": 0,
-    "no-console": 0
+    "no-await-in-loop": 0
   },
   "overrides": [
     {
