add: staging on now.sh

--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --watch src --watch swagger -e js,yml src/server.js",
-    "start": "node src/server.js",
-    "stop": "now remove ireversi",
-    "deploy": "now && now alias",
-    "scale": "now scale ireversi.now.sh 1",
+    "start": "cross-env NODE_ENV=production node src/server.js",
+    "stop": "now remove ireversi-server -y",
+    "deploy": "now --public -e MONGO_URI=@ireversi-mongo-uri -n ireversi-server && now alias && now scale ireversi-server.now.sh 1",
     "lint": "eslint src tests -f codeframe",
     "lint:fix": "eslint src tests --fix",
     "test": "cross-env NODE_ENV=test jest --coverage",
@@ -55,5 +54,8 @@
     "*.js": [
       "eslint -f codeframe"
     ]
+  },
+  "now": {
+    "alias": "ireversi-server.now.sh"
   }
 }
