--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
           keys:
             - nowcli-11.4.1
 
-      - run: sudo npm i -g now@11.4.1
+      - run: sudo npm i -g now@11.4.1 --unsafe-perm
 
       - save_cache:
           paths:
