--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "husky": "1.0.0-rc.13",
     "jest": "23.5.0",
     "lint-staged": "7.2.2",
-    "nodemon": "1.18.3",
-    "prettier": "1.14.2"
+    "nodemon": "1.18.3"
   },
   "husky": {
     "hooks": {
