--- a/swagger/v1/kido/board.yml
+++ b/swagger/v1/kido/board.yml
@@ -2,8 +2,8 @@ tags:
   - name: kido-piece
     description: Kido Reversi API
 
-/matsuda/playing:
-  post:
+/kido/board:
+  get:
     tags:
       - kido-piece
     parameters:
