--- a/swagger/v1/kai/playing.yml
+++ b/swagger/v1/kai/playing.yml
@@ -5,7 +5,7 @@ tags:
 /kai/playing:
   get:
     tags:
-      - kai playing
+      - kai-playing
     parameters:
       - name: "x"
         in: "formData"
@@ -43,31 +43,41 @@ tags:
                 format: "int64"
                 example: 1
   post:
-    tags:
-      - playing
-    parameters:
-      - name: "name"
-        in: "formData"
-        description: "user name"
-        required: true
-        type: "string"
-      - name: "email"
-        in: "formData"
-        description: "email"
-        required: true
-        type: "string"
-      - name: "password"
-        in: "formData"
-        description: "password"
-        required: true
-        type: "string"
-        format: "password"
-    responses:
-      200:
-        description: "success"
-        schema:
-          type: "object"
-          properties:
-            status:
-              type: "string"
-              example: "success"
+      tags:
+        - kai-playing
+      parameters:
+        - name: "x"
+          in: "formData"
+          description: "x info"
+          required: true
+          type: "number"
+        - name: "y"
+          in: "formData"
+          description: "y info"
+          required: true
+          type: "number"
+        - name: "userId"
+          in: "formData"
+          description: "your userId"
+          required: true
+          type: "number"
+      responses:
+        200: # 404的なやつ
+          description: "success"
+          schema:
+            type: "array"
+            items:
+              type: object
+              properties:
+                x:
+                  type: "integer"
+                  format: "int64"
+                  example: 1
+                y:
+                  type: "integer"
+                  format: "int64"
+                  example: 1
+                userId:
+                  type: "integer"
+                  format: "int64"
+                  example: 1
