add board.yml, modified uppercase 'Nnumber' in  playing.yml

--- a/swagger/v1/kohski/playing.yml
+++ b/swagger/v1/kohski/playing.yml
@@ -1,11 +1,11 @@
 tags:
-  - name: playing
-    description: Playing API
+  - name: Kohski-Playing
+    description: Kohski's Playing API
 
 /kohski/playing:
   post:
     tags:
-      - playing
+      - Kohski-playing
     parameters:
       - name: "x"
         in: "query"
