--- a/swagger/v1/kai/playing.yml
+++ b/swagger/v1/kai/playing.yml
@@ -6,6 +6,9 @@ tags:
   post:
       tags:
         - kai-playing
+      externalDocs:
+        description: "Jump directly to JSON"
+        url: "https://ireversi-server.now.sh/api/v1/kai/playing"
       parameters:
         - name: "x"
           in: "formData"
