--- a/swagger/v2/sample.yml
+++ b/swagger/v2/sample.yml
@@ -2,17 +2,37 @@
   get:
     tags:
       - "board"
-    summary: "show all board conditon"
+    summary: "show all board conditon. 全ての盤面情報"
+    description: >
+      - pieces
+        - 盤面に置かれているコマの情報
+      - candidates
+        - 自コマが置けるセルの位置情報
+      - standbys
+        - 他コマが置かれる予定のセル情報
+          - remaining
+            - standbyの残り時間
+          - piece
+            - 置かれる予定の他コマの情報
+    parameters:
+      - name: userId
+        in: "query"
+        description: "userId"
+        type: number
+        example: 1
+        required: true
     responses:
       200:
-        description: "all pieces on board"
+        description: "all condition of pieces on board."
         schema:
+          type: "object"
           $ref: "#/definitions/Board"
 /board/specified_range:
   get:
     tags:
       - "board"
     summary: "show specified board range"
+    description: "指定した範囲内でのboard情報"
     parameters:
       - $ref: "#/definitions/Range/properties/left"
       - $ref: "#/definitions/Range/properties/right"
@@ -33,6 +53,10 @@
     tags:
       - piece
     summary: "set a piece on board"
+    description: |
+      - status
+        - コマが置けたかtrue, falaseで返す
+      - 以下、boardと同じくすべての盤面情報を返す
     parameters:
       - $ref: "#/definitions/Piece/properties/x"
       - $ref: "#/definitions/Piece/properties/y"
@@ -41,7 +65,12 @@
       200:
         description: "show specified board range"
         schema:
-          $ref: "#/definitions/Response"
+          type: "object"
+          properties:
+            status:
+              $ref: "#/definitions/Status"
+            board:
+              $ref: "#/definitions/Board"
   delete:
     tags:
       - piece
@@ -50,7 +79,6 @@
       - name: "pieces"
         description: "Add items to be deleted"
         in: "body"
-        type: "array"
         schema:
           $ref: "#/definitions/Positions"
       - name: "keyword"
@@ -60,64 +88,111 @@
         type: "string"
     responses:
       200:
-        description: "Board data"
+        description: "return delete status and board condition"
         schema:
-          $ref: "#/definitions/Response"
-/piece/first_piece:
+          type: "object"
+          properties:
+            status:
+              $ref: "#/definitions/Status"
+            board:
+              $ref: "#/definitions/Board"
+/first_piece/position:
   post:
     tags:
-      - piece
+      - first_piece
     summary: "set the first piece"
     parameters:
-    - in: "body"
-      name: "first"
-      type: "object"
-      schema:
-        $ref: "#/definitions/Piece"
-    - in: "body"
-      name: "second"
-      type: "object"
-      schema:
-        $ref: "#/definitions/Position"
+      - $ref: "#/definitions/Piece/properties/x"
+      - $ref: "#/definitions/Piece/properties/y"
+      - $ref: "#/definitions/Piece/properties/userId"
     responses:
       200:
-        description: "show specified board range"
+        description: "return a place second piece has put"
         schema:
-          $ref: "#/definitions/Response"
+          type: "object"
+          properties:
+            status:
+              $ref: "#/definitions/Status"
+            standby:
+              $ref: "#/definitions/Standby"
+/first_piece/direction:
+  post:
+    tags:
+      - first_piece
+    summary: "direction from first piece"
+    parameters:
+    - in: "number"
+      required: true
+      name: "userId"
+      description: "userId"
+      type: "number"
+      schema:
+        $ref: "#/definitions/Piece/properties/userId"
+    - in: "string"
+      required: true
+      name: "direction"
+      type: "body"
+      description: "type one of following direction"
+      enum: ["n", "ne", "e", "se", "s", "sw", "w", "nw"]
+    responses:
+      200:
+        description: "return board condition when first piece shoot"
+        schema:
+          type: "object"
+          properties:
+            status:
+              $ref: "#/definitions/Status"
+            board:
+              $ref: "#/definitions/Board"
 
 definitions:
-  Response:
+  Standbys:
+    type: array
+    description: "pieces to be ready to put"
+    items:
+      $ref: "#/definitions/Standby"
+  Standby:
     type: "object"
+    description: "piece to be ready to put"
     properties:
-      status:
-        type: "boolean"
-        example: true
-      board:
-        type: "object"
-        $ref: "#/definitions/Board"
+      remaining:
+        type: "number"
+      piece:
+        $ref: "#/definitions/Piece"
+  Status:
+    type: "boolean"
+    description: "return success or fail of your order"
+    example: true
   Board:
     type: "object"
+    description: "show a condition of all pieces on board"
     properties:
       pieces:
         $ref: "#/definitions/Pieces"
       candidates:
         $ref: "#/definitions/Positions"
+      standbys:
+        $ref: "#/definitions/Standbys"
   Pieces:
     type: array
+    description: "pieces condition on board"
     items:
       $ref: "#/definitions/Piece"
   Piece:
     type: object
+    description: "piece condition"
     properties:
       x:
         name: "x"
         type: number
+        description: "x position"
         example: 1
         in: "formData"
         required: true
       y:
         name: "y"
         type: number
+        description: "y position"
         example: 1
         in: "formData"
         required: true
@@ -130,10 +205,12 @@ definitions:
         required: true
   Positions:
     type: array
+    description: "just show piece locations (not include userId information)"
     items:
       $ref: "#/definitions/Position"
   Position:
     type: "object"
+    description: "just show piece location (not include userId information)"
     properties:
       x:
         name: "x"
@@ -147,6 +224,7 @@ definitions:
         in: "formData"
   Range:
     type: "object"
+    description: "specify a board range to be show"
     properties:
       left:
         name: "l"
